--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,39 @@
 .App {
+  background-color: white;
+}
+
+.AppDark {
+  background-color: gray;
+}
+
+.btn {
   text-align: center;
+  width: 20%;
+  margin-left: 40%;
+  font-size: 15px;
+  background-color: rgb(166, 210, 235);
+  height: 30px;
+  padding: 5px;
+  border: 1px solid black;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.playersContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.playerCard {
+  width: 25%;
+  border: 1px solid black;
+  margin: 2% 0;
+  background-color: lightgrey;
+  padding: 3%;
+  text-align: center;
+  border-radius: 3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display_none {
+  display: none;
 }
