--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,14 +8,15 @@
 
 .btn {
   text-align: center;
-  width: 20%;
-  margin-left: 40%;
+  width: 10%;
+  margin-top: 2rem;
+  margin-left: 45%;
   font-size: 15px;
   background-color: rgb(166, 210, 235);
   height: 30px;
-  padding: 5px;
   border: 1px solid black;
   margin-bottom: 10px;
+  border-radius: 2rem;
 }
 
 .playersContainer {
